--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ button {
   padding: 10px 15px;
   border: none;
   border-radius: 8px;
-  background: #ff9800;
+  background: #5eff00;
   color: white;
   font-size: 16px;
   cursor: pointer;
