--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
  body {
   font-family: Arial, sans-serif;
   text-align: center;
-  background: linear-gradient(to right, #4facfe, #00f2fe);
+  background: linear-gradient(to right, #4facfe, #87fe00);
   color: #fff;
   padding: 40px;
 }
@@ -25,7 +25,7 @@ button {
   padding: 10px 15px;
   border: none;
   border-radius: 8px;
-  background: #5eff00;
+  background: #96e00d;
   color: white;
   font-size: 16px;
   cursor: pointer;
